--- a/settings.toml
+++ b/settings.toml
@@ -3,3 +3,8 @@
 [capture]
 # Interval between snapshots in seconds
 interval = 60
+
+[server]
+# Web server settings for local network hosting
+address = "0.0.0.0"
+port = 8000
